; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/d3dx9_36/extr_util.c_la_to_rgba.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/d3dx9_36/extr_util.c_la_to_rgba.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vec4 = type { i32, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.vec4*, %struct.vec4*, i32*)* @la_to_rgba to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @la_to_rgba(%struct.vec4* %0, %struct.vec4* %1, i32* %2) #0 {
  %4 = alloca %struct.vec4*, align 8
  %5 = alloca %struct.vec4*, align 8
  %6 = alloca i32*, align 8
  store %struct.vec4* %0, %struct.vec4** %4, align 8
  store %struct.vec4* %1, %struct.vec4** %5, align 8
  store i32* %2, i32** %6, align 8
  %7 = load %struct.vec4*, %struct.vec4** %4, align 8
  %8 = getelementptr inbounds %struct.vec4, %struct.vec4* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 4
  %10 = load %struct.vec4*, %struct.vec4** %5, align 8
  %11 = getelementptr inbounds %struct.vec4, %struct.vec4* %10, i32 0, i32 1
  store i32 %9, i32* %11, align 4
  %12 = load %struct.vec4*, %struct.vec4** %4, align 8
  %13 = getelementptr inbounds %struct.vec4, %struct.vec4* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  %15 = load %struct.vec4*, %struct.vec4** %5, align 8
  %16 = getelementptr inbounds %struct.vec4, %struct.vec4* %15, i32 0, i32 3
  store i32 %14, i32* %16, align 4
  %17 = load %struct.vec4*, %struct.vec4** %4, align 8
  %18 = getelementptr inbounds %struct.vec4, %struct.vec4* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 4
  %20 = load %struct.vec4*, %struct.vec4** %5, align 8
  %21 = getelementptr inbounds %struct.vec4, %struct.vec4* %20, i32 0, i32 2
  store i32 %19, i32* %21, align 4
  %22 = load %struct.vec4*, %struct.vec4** %4, align 8
  %23 = getelementptr inbounds %struct.vec4, %struct.vec4* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = load %struct.vec4*, %struct.vec4** %5, align 8
  %26 = getelementptr inbounds %struct.vec4, %struct.vec4* %25, i32 0, i32 0
  store i32 %24, i32* %26, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
